# analyze_pc

./: .gitignore  CMakeLists.txt  Dockerfile  README  manifest.xml.bak  package.xml  stack.xml
cache/cubes_pcd/: cube1.pcd  publish_cubes.sh
createCubePCL/: CMakeLists.txt  cube_params.yaml  mainpage.dox  manifest.xml  regenerate.sh
createCubePCL/doc/: report.tex
createCubePCL/include/createCubePCL/: analyze_pc.h  coverage_pc.h  pcl_cube.h
createCubePCL/launch/: analyze_pc.launch  analyze_pc_with_bunny.launch  bridge_cloud_pub.launch  bunny_pub.launch  coverage_analysis.launch  publish_view_cube.launch  two_cached_cubes.launch  two_cubes.launch
createCubePCL/res/: plot_tc.py  res_data.txt
createCubePCL/rviz/: bridge_sim.vcg  bridge_two_lasers.vcg  coverage_cubes.vcg  cube_errors.vcg  cube_pc.vcg  kp_bunny.vcg  kp_cubes.vcg  saced_bunny.vcg  two_cubes.vcg
createCubePCL/src/: analyze_pc.cpp  bridge_lasersim.cpp  compare_two_cubes.cpp  coverage_pc.cpp  create_cube.cpp  dm_colors.hpp  pcl_cube.cpp  publish_cube.cpp  save_cube.cpp
doc/: report.lyx  report.tex
include/createCubePCL/: analyze_pc.h  coverage_pc.h  pcl_cube.h
launch/: analyze_pc.launch  analyze_pc_with_bunny.launch  analyze_pc_with_cubes.launch  bridge_cloud_pub.launch  bridge_transform_publish.launch  bunny_pub.launch  coverage_analysis.launch  publish_view_cube.launch  two_cached_cubes.launch  two_cubes.launch
res/: test_cases.py
rviz/: bridge_sim.vcg  bridge_two_lasers.vcg  kp_cubes.vcg
src/: analyze_pc.cpp  bridge_lasersim.cpp  compare_two_cubes.cpp  coverage_pc.cpp  density_test.cpp  dm_colors.hpp  pcl_cube.cpp  publish_cube.cpp  save_cube.cpp  utils.hpp
