<?xml version="1.0"?>
<package>
  <name>analyze_pc</name>
  <version>0.0.0</version>
  <description>The analyze_pc package</description>

  <maintainer email="savant.2020@gmail.com">savant</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf_conversions</run_depend>

</package>
